@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.55 2004/07/01 15:14:03 recht Exp $
+# $NetBSD: Makefile,v 1.56 2004/07/06 13:52:25 xtraeme Exp $
 
-DISTNAME=	libxml2-2.6.10
+DISTNAME=	libxml2-2.6.11
 CATEGORIES=	textproc
-#MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libxml2/2.6/}
-#EXTRACT_SUFX=	.tar.bz2
-MASTER_SITES=	ftp://xmlsoft.org/
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libxml2/2.6/}
+EXTRACT_SUFX=	.tar.bz2
+#MASTER_SITES=	ftp://xmlsoft.org/
 
 MAINTAINER=	recht@NetBSD.org
 HOMEPAGE=	http://xmlsoft.org/
